# pycheck

./: .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml
src/: run-tests.sh  test.py
src/pycheck/: __init__.py  config.py  core.py  main.py  pycheck.py  settings.py  utils.py
src/pycheck/config/pro/ut1/: pop0.py  pop1.py
src/pycheck/config/pro/ut2/: pop0.py
src/pycheck/lib/: admin.py  api.py  auth.py  checkers.py  checking.py  core.py  exceptions.py  exercise.py  runner.py  utils.py
src/pycheck/templates/: empty_exercise.py  exercise.py  exercise_config.py
tests/: conftest.py  run-tests.sh  test.py  test_admin.py  test_checking.py  test_core.py  test_exercise.py  test_main.py  test_pycheck.py
tests/exercises/: sum.py
