[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycheck"
version = "1.0.16"
license = {file = "LICENSE"}
dependencies = [
  'prettyconf',
  'rich',
  'typer'
]
authors = [
  {email = "sdelquin@gmail.com"},
  {name = "Sergio Delgado Quintero"}
]
maintainers = [
  {name = "Sergio Delgado QUintero", email = "sdelquin@gmail.com"}
]
description = "Check the execution of python exercises and assignments"
Home-page = "https://pycheck.es"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
repository = "https://github.com/sdelquin/pycheck"

[project.scripts]
pycheck = "pycheck.main:app"
