[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycheck"
version = "1.2.42"
license = { file = "LICENSE" }
dependencies = ['setuptools', 'prettyconf', 'rich', 'typer', 'jinja2']
authors = [
  { email = "sdelquin@gmail.com" },
  { name = "Sergio Delgado Quintero" },
]
maintainers = [
  { name = "Sergio Delgado Quintero", email = "sdelquin@gmail.com" },
]
description = "Check the execution of python exercises and assignments"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://pycheck.es"
repository = "https://github.com/sdelquin/pycheck"

[project.scripts]
pycheck = "pycheck.main:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
